--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -178,6 +178,10 @@
         padding: 1.5rem 0;
     }
 
+    .header-logo img {
+        width: 155px;
+    }
+
     .header-contact {
         display: inline-block;
     }
@@ -258,6 +262,10 @@
         margin-top: 1.2rem;
     }
 
+    .about-us-btm img {
+        aspect-ratio: 13 / 9;
+    }
+
     .about-us-btm {
         width: calc(50% - 2rem);
     }
@@ -306,21 +314,30 @@
         gap: 4rem;
         flex-direction: row;
         flex-wrap: wrap;
-        justify-content: space-between;
+        justify-content: center;
+        align-items: center;
     }
 
     .services-top {
-        width: calc(33.33% - 2rem);
+        width: max-content;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
+
+    .services-top p {
+        width: 23rem;
     }
 
     .services-btm {
-        width: calc(66.66% - 2rem);
+        width: 90%;
         gap: 3rem;
         flex-wrap: wrap;
     }
 
     .services-item {
         width: calc(50% - 1.5rem);
+        aspect-ratio: 14 / 9;
     }
 
     .home-cta {
