--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -651,3 +651,14 @@ header .custom-container {
     align-content: center;
     line-height: 1.2;
 }
+
+.animate-on-scroll {
+    opacity: 0;
+    transform: translateY(20px);
+    transition: opacity 0.7s ease-out, transform 0.7s ease-out;
+}
+
+.animate-on-scroll.animated {
+    opacity: 1;
+    transform: translateY(0);
+}
